--- a/Lended/Base.lproj/LaunchScreen.storyboard
+++ b/Lended/Base.lproj/LaunchScreen.storyboard
@@ -21,9 +21,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logolarge" translatesAutoresizingMaskIntoConstraints="NO" id="Rlj-Ck-GCe">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoInverted" translatesAutoresizingMaskIntoConstraints="NO" id="Rlj-Ck-GCe">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" red="0.840576171875" green="0.46434685587882996" blue="0.36077871918678284" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.83921568627450982" green="0.46274509803921571" blue="0.36078431372549019" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -41,6 +41,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Logolarge" width="1024" height="1024"/>
+        <image name="logoInverted" width="548" height="548"/>
     </resources>
 </document>
